# scoulib

./: .gitignore  CMakeLists.txt  scoulib.sln  scoulib.vcxproj  scoulib.vcxproj.filters  setup.py
app/: CMakeLists.txt  app.c
include/scoulib/: hello.h  sizedistribution.h
python/: scoulib.c
src/: CMakeLists.txt  hello.c  sizedistribution.c
src/cii/: CMakeLists.txt
x64/Debug/scoulib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  scoulib.lastbuildstate
